[tool.poetry]
name = "rosbag-search"
version = "0.1.0"
description = "A simple rosbag search tool."
authors = ["Lea Wedmann"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
